--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
     <meta name="author" content="GiovanniZumbo">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
+
+    <!-- JS -->
     <script defer src="script.js"></script>
+
+    <!-- BootStrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
     <main>
-        <div>
+        <div id="list-page" class="container">
 
         </div>
     </main>
